/*
* This code has been generated by the Rebel: a code generator for modern Java.
*
* Drop us a line or two at feedback@archetypesoftware.com: we would love to hear from you!
*/
package com.cda.contenu_seance.model;

import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

import javax.persistence.*;
import java.util.*;


@Entity
@Getter
@Setter
@NoArgsConstructor

public class Centre {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;
    private String nom;
    private String adresse;
    private String codesPostal;
    private String ville;
    @ManyToMany
    private List <Coordinateur> coordinateurs;

//fetch = FetchType.LAZY,,cascade = CascadeType.REMOVE
    @OneToMany( mappedBy = "centre")
    private List<Session> sessions;



}